Make default jdk sun 142 when none specified